# dudes_in_space

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: environment.rs  lib.rs  person.rs  vessel.rs
api/src/environment/: environment.rs  environment_context.rs  mod.rs  nebula.rs  request_storage.rs
api/src/finance/: bank.rs  bank_registry.rs  misc.rs  mod.rs  personal_finance_package.rs  wallet.rs
api/src/item/: item.rs  item_safe.rs  item_storage.rs  mod.rs  offer.rs  order.rs  trade_table.rs
api/src/items/: item.rs  item_storage.rs  mod.rs  recipe.rs
api/src/module/: console.rs  mod.rs  module.rs  module_capability.rs  module_storage.rs  process_token.rs
api/src/modules/: assembly_recipe.rs  mod.rs  module_person_interfaces.rs  module_storage.rs  vessel_person_interfaces.rs
api/src/person/: bank.rs  building_vessels_objective.rs  crafting_modules_objective.rs  crafting_vessels_objective.rs  logger.rs  mod.rs  objective.rs  person.rs  status_collector.rs  subordination_table.rs  trading_objective.rs  utils.rs
api/src/person/objective/: either_objective.rs  mod.rs  (+1 more)
api/src/recipe/: assembly_recipe.rs  mod.rs  recipe.rs
api/src/trade/: item_trade_table.rs  mod.rs  offer.rs  order.rs  vessel_trade_table.rs
api/src/utils/: color.rs  mod.rs  non_nil_uuid.rs  range.rs  request.rs  tagged_option.rs  time_point.rs  untagged_option.rs  utils.rs
api/src/vessel/: console.rs  docking_clamp.rs  docking_connector.rs  mod.rs  vessel.rs
core/: Cargo.toml
core/src/: components.rs  lib.rs
core/src/env_presets/: mod.rs  preset0.rs
core/src/modules/: assembler.rs  cargo_container.rs  core_module.rs  dockyard.rs  fabricator.rs  mod.rs  ore_manifold.rs  personnel_area.rs  plant_facility.rs  shuttle.rs  trading_terminal.rs  unmanned_trading_terminal.rs  unmanned_vessel_selling_terminal.rs  vessel_selling_terminal.rs
core/src/objectives/: adventuring_objective.rs  mod.rs
core/tests/: assembler_test.rs
sdl_presenter/: Cargo.toml
sdl_presenter/src/: camera.rs  logger.rs  main.rs  person_table.rs  render_model.rs  utils.rs
sdl_presenter/src/render/: convertions.rs  draw_utils.rs  font_provider.rs  layout.rs  mod.rs  renderer.rs
(+96 files in other folders)
