[workspace]
members = ["dyn_serde", "dyn_serde_macro", "api", "core"]

[package]
name = "dudes_in_space"
version = "0.0.1"
edition = "2024"

[dependencies]
dudes_in_space_api = { path = "api" }
dudes_in_space_core = { path = "core" }
dyn_serde = { path = "dyn_serde" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-intermediate = "1.6.1"
rand = "0.9.2"
serde_json = "1.0.140"
