[package]
name = "dudes_in_space_api"
version = "0.0.1"
edition = "2024"


[dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
rand = "0.9.2"
dyn_serde = { path = "../dyn_serde"}
dyn_serde_macro = { path = "../dyn_serde_macro"}
uuid = { version =  "1.17.0", features = ["serde"] }
