[package]
name = "sdl_presenter"
version = "0.0.1"
edition = "2024"

[dependencies]
dudes_in_space_api = { path = "../api" }
dudes_in_space_core = { path = "../core" }
dyn_serde = { path = "../dyn_serde" }
sdl2 = "0.38.0"
clap = { version = "4.5.43", features = ["derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.9.2"
serde_json = "1.0.140"

[features]
default = []
